--- a/templates/admin/evening_master.html
+++ b/templates/admin/evening_master.html
@@ -126,9 +126,9 @@
                         </td>
                         <td class="text-end pe-4">
                             <!-- Print Button Restored -->
-                            <a href="{{ url_for('generate_pdf', settle_id=s.id) }}" target="_blank" class="btn btn-sm btn-light border shadow-sm me-1" title="Print PDF">
-                                <i class="fa-solid fa-print text-dark"></i>
-                            </a>
+                        <a href="{{ url_for('download_evening_pdf', settle_id=s.id) }}" class="btn btn-sm btn-outline-danger" title="Download PDF">
+    <i class="fa-solid fa-file-pdf"></i>
+</a>
                             <a href="{{ url_for('admin_edit_evening', settle_id=s.id) }}" class="btn btn-sm btn-primary shadow-sm me-1" title="Edit">
                                 <i class="fa-solid fa-pen"></i>
                             </a>
